@@ -895,6 +895,7 @@ fhandler_console::open_setup (int flags)
   set_flags ((flags & ~O_TEXT) | O_BINARY);
   if (myself->set_ctty (this, flags) && !myself->cygstarted)
     init_console_handler (true);
+  fhandler_base::open_setup (flags);
 }
 
 int
