@@ -562,6 +562,7 @@ fhandler_pty_slave::open_setup (int flags)
   set_flags ((flags & ~O_TEXT) | O_BINARY);
   myself->set_ctty (this, flags);
   report_tty_counts (this, "opened", "");
+  fhandler_base::open_setup (flags);
 }
 
 void
@@ -1247,6 +1248,7 @@ fhandler_pty_master::open_setup (int flags)
   char buf[sizeof ("opened pty master for ptyNNNNNNNNNNN")];
   __small_sprintf (buf, "opened pty master for pty%d", get_minor ());
   report_tty_counts (this, buf, "");
+  fhandler_base::open_setup (flags);
 }
 
 off_t
